--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta property="og:url" content="https://jahnavi-prasad.github.io/GhostDetector/"/>
+    <meta property="og:title" content="Ghost Detector"/>
+    <meta property="og:description" content="Scared of Ghosts? (Prasanth I'm looking at ya). Use this Detector to find out where nearby ghosts are and avoid those places!"/>
+    <meta property="og:site_name" content="Ghost Detector"/>
+    <meta property="og:image" content="https://repository-images.githubusercontent.com/504305510/ba857ac6-661c-4cdb-b5ee-1b0a3d157d16"/>
 
     <title>Ghost Detector</title>
 
